# quickerGPGX

./: .gitignore  .gitmodules  README.md  meson.build  meson_options.txt
.github/workflows/: make.yml
core/: genesis.c  genesis.h  io_ctrl.c  loadrom.c  loadrom.h  mem68k.c  memz80.c  osd.h  shared.h  state.c  state.h  system.h  vdp_ctrl.c  vdp_ctrl.h  vdp_render.c  vdp_render.h
core/cart_hw/: areplay.c  areplay.h  ggenie.c  md_cart.c  md_cart.h  megasd.c  sms_cart.c  sms_cart.h  sram.c  sram.h
core/cart_hw/svp/: svp.h
core/cd_hw/: cd_cart.c  cd_cart.h  cdc.c  cdc.h  cdd.c  cdd.h  gfx.c  gfx.h  pcm.c  pcm.h  scd.c  scd.h
core/debug/: cpuhook.h
core/input_hw/: gamepad.c
core/m68k/: m68k.h  m68kcpu.c  m68kcpu.h
core/sound/: psg.c  sound.c  sound.h  ym2413.c  ym2612.c  ym2612.h
core/z80/: z80.c  z80.h
sdl/: config.h
source/: controller.hpp  emuInstanceBase.hpp  gpgxInstanceBase.hpp  meson.build  playbackInstance.hpp  player.cpp
source/base/: gpgxInstance.hpp  meson.build
source/gpgx/: emuInstance.hpp  meson.build
source/gpgx/core/cinterface/: callbacks.h  cinterface.c
source/gpgx/core/core/: loadrom.c  loadrom.h  mem68k.c  membnk.c  membnk.h  shared.h  state.c  vdp_ctrl.c  vdp_ctrl.h  vdp_render.c
source/gpgx/core/core/cart_hw/: md_cart.c  sms_cart.c  sms_cart.h
source/gpgx/core/core/cart_hw/svp/: ssp16.c  svp.c
source/gpgx/core/core/cd_hw/: cdd.c  pcm.c  scd.h
source/gpgx/core/core/input_hw/: input.c  input.h
source/gpgx/core/core/m68k/: m68kcpu.c  m68kcpu.h
source/gpgx/core/core/sound/: sound.c  sound.h  ym2612.c  ym2612.h
source/gpgx/core/core/z80/: z80.c
source/gpgx/core/util/: osd.h
source/new/: fileio.c  gpgxInstance.hpp  main.c  meson.build
source/new/core/: genesis.c  genesis.h  io_ctrl.c  loadrom.c  loadrom.h  macros.h  mem68k.c  membnk.c  memz80.c  osd.h  state.c  state.h  system.c  types.h  vdp_ctrl.c  vdp_ctrl.h  vdp_render.c  vdp_render.h
source/new/core/cart_hw/: areplay.c  eeprom_i2c.c  eeprom_i2c.h  ggenie.c  md_cart.c  md_cart.h  megasd.c  sms_cart.c  sram.h
source/new/core/cart_hw/svp/: ssp16.h  svp.c
source/new/core/cd_hw/: cd_cart.c  cd_cart.h  cdd.c  cdd.h  pcm.c  scd.h
source/new/core/input_hw/: input.c  terebi_oekaki.h
source/new/core/m68k/: m68k.h  m68kcpu.c  m68kcpu.h
source/new/core/sound/: blip_buf.c  psg.c  psg.h  sound.c  ym2612.c
source/new/core/z80/: osd_cpu.h
source/sdl/: config.c  config.h  fileio.c  fileio.h  main.c
testbed/: .gitmodules  README.md  meson.build  meson_options.txt  tester.cpp
testbed/base/: meson.build
testbed/new/: cddImpl.c  fileio.c  gpgxInstance.hpp  main.c  meson.build
testbed/source/: controller.hpp  gpgxInstanceBase.hpp  meson.build  player.cpp  tester.cpp
testbed/source/new/: gpgxInstance.hpp  main.c  meson.build
testbed/tests/: anotherWorld.playaround.sol  anotherWorld.playaround.test  dinoRunner.playaround.sol  dinoRunner.playaround.test  drunkasilike.playaround.sol  drunkasilike.playaround.test  drunkasilike.savestart.state  drunkasilike.savestart.test  ecco.playaround.sol  ecco.playaround.test  maiNurse.playaround.sol  maiNurse.playaround.test  meson.build  princeOfPersia.playaround.test  run_test.sh  segapede.playaround.test  sonic.playaround.test  theLionKing.anyPercent.sol  theLionKing.anyPercent.test  throne.playaround.test  ultimateMK3.playaround.sol  ultimateMK3.playaround.test  virtuaRacing.playaround.test
tests/: .gitignore  anotherWorld.anyPercent.sol  anotherWorld.anyPercent.test  anotherWorld.playaround.test  avuado.playaround.test  dinoRunner.loadState.sol  dinoRunner.loadState.state  dinoRunner.loadState.test  dinoRunner.playaround.sol  dinoRunner.playaround.test  dinoRunner.savestart.test  drunkasilike.playaround.test  drunkasilike.savestart.state  drunkasilike.savestart.test  ecco.playaround.sol  ecco.playaround.test  frogger.playaround.sol  frogger.playaround.test  gargoyles.playaround.sol  gargoyles.playaround.test  maiNurse.playaround.test  meson.build  microMachines.playaround.sol  microMachines.playaround.test  monacoGP.playaround.sol  monacoGP.playaround.test  pitman.playaround.sol  pitman.playaround.test  princeOfPersia.playaround.sol  princeOfPersia.playaround.test  run_test.sh  segapede.playaround.sol  segapede.playaround.test  sonic.playaround.sol  sonic.playaround.test  sonic.savestart.sol  sonic.savestart.state  sonic.savestart.test  theLionKing.anyPercent.sol  theLionKing.anyPercent.test  (+5 more)
