# newGPGX Core sources

newGPGXSrc =  [
   'main.c',
   '../../../sdl/config.c',
   '../../../sdl/error.c',
   '../../../sdl/fileio.c',
   '../../../sdl/unzip.c',
   '../../../core/debug/cpuhook.c',
   '../../../core/sound/sound.c',
   '../../../core/sound/ym3438.c',
   '../../../core/sound/opll.c',
   '../../../core/sound/eq.c',
   '../../../core/sound/ym2413.c',
   '../../../core/sound/blip_buf.c',
   '../../../core/sound/psg.c',
   '../../../core/sound/ym2612.c',
   '../../../core/tremor/framing.c',
   '../../../core/tremor/block.c',
   '../../../core/tremor/vorbisfile.c',
   '../../../core/tremor/bitwise.c',
   '../../../core/tremor/synthesis.c',
   '../../../core/tremor/codebook.c',
   '../../../core/tremor/registry.c',
   '../../../core/tremor/mdct.c',
   '../../../core/tremor/floor1.c',
   '../../../core/tremor/sharedbook.c',
   '../../../core/tremor/info.c',
   '../../../core/tremor/mapping0.c',
   '../../../core/tremor/res012.c',
   '../../../core/tremor/window.c',
   '../../../core/tremor/floor0.c',
   '../../../core/state.c',
   '../../../core/membnk.c',
   '../../../core/vdp_ctrl.c',
   '../../../core/z80/z80.c',
   '../../../core/io_ctrl.c',
   '../../../core/ntsc/sms_ntsc.c',
   '../../../core/ntsc/md_ntsc.c',
   '../../../core/m68k/s68kcpu.c',
   '../../../core/m68k/m68kcpu.c',
   '../../../core/memz80.c',
   '../../../core/genesis.c',
   '../../../core/vdp_render.c',
   '../../../core/system.c',
   '../../../core/cd_hw/cd_cart.c',
   '../../../core/cd_hw/libchdr/src/chd.c',
   '../../../core/cd_hw/libchdr/src/bitstream.c',
   '../../../core/cd_hw/libchdr/src/flac.c',
   '../../../core/cd_hw/libchdr/src/huffman.c',
   '../../../core/cd_hw/libchdr/src/cdrom.c',
   '../../../core/cd_hw/libchdr/deps/zlib/inflate.c',
   '../../../core/cd_hw/libchdr/deps/zlib/adler32.c',
   '../../../core/cd_hw/libchdr/deps/zlib/inftrees.c',
   '../../../core/cd_hw/libchdr/deps/zlib/inffast.c',
   '../../../core/cd_hw/libchdr/deps/zlib/zutil.c',
   '../../../core/cd_hw/libchdr/deps/libFLAC/crc.c',
   '../../../core/cd_hw/libchdr/deps/libFLAC/md5.c',
   '../../../core/cd_hw/libchdr/deps/libFLAC/format.c',
   '../../../core/cd_hw/libchdr/deps/libFLAC/lpc_intrin_sse2.c',
   '../../../core/cd_hw/libchdr/deps/libFLAC/cpu.c',
   '../../../core/cd_hw/libchdr/deps/libFLAC/lpc_intrin_sse41.c',
   '../../../core/cd_hw/libchdr/deps/libFLAC/bitmath.c',
   '../../../core/cd_hw/libchdr/deps/libFLAC/bitreader.c',
   '../../../core/cd_hw/libchdr/deps/libFLAC/memory.c',
   '../../../core/cd_hw/libchdr/deps/libFLAC/lpc_intrin_sse.c',
   '../../../core/cd_hw/libchdr/deps/libFLAC/fixed.c',
   '../../../core/cd_hw/libchdr/deps/libFLAC/lpc_intrin_avx2.c',
   '../../../core/cd_hw/libchdr/deps/libFLAC/lpc.c',
   '../../../core/cd_hw/libchdr/deps/libFLAC/stream_decoder.c',
   '../../../core/cd_hw/libchdr/deps/libFLAC/float.c',
   '../../../core/cd_hw/libchdr/deps/lzma/LzFind.c',
   '../../../core/cd_hw/libchdr/deps/lzma/LzmaEnc.c',
   '../../../core/cd_hw/libchdr/deps/lzma/LzmaDec.c',
   '../../../core/cd_hw/cdc.c',
   '../../../core/cd_hw/pcm.c',
   '../../../core/cd_hw/gfx.c',
   '../../../core/cd_hw/scd.c',
   '../../../core/cd_hw/cdd.c',
   '../../../core/input_hw/sportspad.c',
   '../../../core/input_hw/activator.c',
   '../../../core/input_hw/mouse.c',
   '../../../core/input_hw/paddle.c',
   '../../../core/input_hw/gamepad.c',
   '../../../core/input_hw/input.c',
   '../../../core/input_hw/terebi_oekaki.c',
   '../../../core/input_hw/teamplayer.c',
   '../../../core/input_hw/graphic_board.c',
   '../../../core/input_hw/lightgun.c',
   '../../../core/input_hw/xe_1ap.c',
   '../../../core/mem68k.c',
   '../../../core/cart_hw/svp/ssp16.c',
   '../../../core/cart_hw/svp/svp.c',
   '../../../core/cart_hw/areplay.c',
   '../../../core/cart_hw/eeprom_spi.c',
   '../../../core/cart_hw/sram.c',
   '../../../core/cart_hw/eeprom_93c.c',
   '../../../core/cart_hw/sms_cart.c',
   '../../../core/cart_hw/eeprom_i2c.c',
   '../../../core/cart_hw/ggenie.c',
   '../../../core/cart_hw/md_cart.c',
   '../../../core/cart_hw/megasd.c',
   '../../../core/loadrom.c',
]

newGPGXIncludeDirs = [
  '.',
  '../../../core/',
  '../../../sdl',
  '../../../sdl/sdl2',
  '../../../core/cd_hw/libchdr/deps/libFLAC/include',
  '../../../core/cd_hw/libchdr/deps/lzma',
  '../../../core/cd_hw/libchdr/deps/zlib',
]

newGPGXCompileArgs = [
  '-DLSB_FIRST',
  '-DUSE_16BPP_RENDERING',
  '-DUSE_LIBTREMOR',
  '-DUSE_LIBCHDR',
  '-DMAXROMSIZE=33554432',
  '-DHAVE_YM3438_CORE',
  '-DHAVE_OPLL_CORE',
  '-DENABLE_SUB_68K_ADDRESS_ERROR_EXCEPTIONS',
  '-DHAVE_YM3438_CORE',
  '-DUSE_LIBVORBIS',
  '-DUSE_LIBTREMOR',
  '-DUSE_LIBCHDR',
  '-DHAVE_ALLOCA_H',
  '-DPACKAGE_VERSION="1.3.2"',
  '-DFLAC_API_EXPORTS',
  '-DFLAC__HAS_OGG=0',
  '-DHAVE_LROUND',
  '-DHAVE_STDINT_H',
  '-DHAVE_SYS_PARAM_H',
  '-D_7ZIP_ST',
  '-DUSE_DYNAMIC_ALLOC',
]

# newGPGX Core Configuration

 newGPGXDependency = declare_dependency(
  compile_args        : [  newGPGXCompileArgs ],
  include_directories : include_directories(newGPGXIncludeDirs),
  sources             : [ newGPGXSrc ],
  dependencies        : [  
                          dependency('sdl2',  required : true),
                          dependency('zlib',  required : true)
                        ]
 )
